--- a/laundry/Pages/Shared/_Layout.cshtml
+++ b/laundry/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">laundry</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">.Net Bootcamp</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -49,7 +49,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - TM 
+            @*&copy; 2021 - TM*@ 
         </div>
     </footer>
 
