--- a/laundry/Pages/Create.cshtml
+++ b/laundry/Pages/Create.cshtml
@@ -1,4 +1,4 @@
-@page
+@page "{SelectedDate?}"
 @model laundry.Pages.timeslot.CreateModel
 
 @{
@@ -21,25 +21,26 @@
             <div class="form-group">
                 <label asp-for="TimeSlotModel.lm" class="control-label">Laundry Machine</label>
                 @*<input placeholder="Machine-1" value="Machine-1" asp-for="TimeSlotModel.lm" class="form-control" />*@
-                <select asp-for="TimeSlotModel.lm">
-                    <option>Please select one</option>
-                    <option>Old machine</option>
+                <select required asp-for="TimeSlotModel.lm">
                     <option>New machine</option>
+                    <option>Old machine</option>
                 </select>
 
                 <span asp-validation-for="TimeSlotModel.lm" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TimeSlotModel.timeslot" step="60" class="control-label">Time slot</label>
-                <input asp-for="TimeSlotModel.timeslot" class="form-control" />
-                <span asp-validation-for="TimeSlotModel.timeslot" class="text-danger"></span>
+  
+                <label  step="60" class="control-label">Select Date </label>
+                <input min="2021-04-01" type="date" asp-for="SelectedDate" />
+
+                <label step="60" class="control-label">Free Time Slots </label>
+
+                @if (Model.freeTimeSlots != null)
+                {
+                    @Html.DropDownList("selectedTsVal", (IEnumerable<SelectListItem>)Model.freeTimeSlots, new { required = "required" })
+                } 
             </div>
 
-            @*<div class="form-group">
-            <label asp-for="TimeSlotModel.regdate" class="control-label"></label>
-            <input asp-for="TimeSlotModel.regdate" class="form-control" />
-            <span asp-validation-for="TimeSlotModel.regdate" class="text-danger"></span>
-            </div>*@
             <input type="hidden" asp-for="TimeSlotModel.regdate" value="@DateTime.Now" />
 
             <div class="form-group">
@@ -52,6 +53,61 @@
 <div>
     <a asp-page="Index">Back to List</a>
 </div>
+<script>
+    $(document).ready(function () {
+
+        $("#SelectedDate").change(function () {
+            var date = $(this).val();
+            var lm = $("#TimeSlotModel_lm option:selected").text();
+
+            $.ajax({
+                url: '/freetimeslots',
+                type: 'GET',
+                data: { Date: date, LM: lm  },
+                dataType: 'json',
+                success: function (response) {
+
+                    var len = response.data.length;
+                    var res = response.data;
+                    $("#selectedTsVal").empty();
+                    for (var i = 0; i < len; i++) {
+                        var text = res[i]['text'];
+                        var value = res[i]['value'];
+
+                        $("#selectedTsVal").append("<option value='" + value + "'>" + text + "</option>");
+
+                    }
+                }
+            });
+        });
+        $("#TimeSlotModel_lm").change(function () {
+            var date = $("#SelectedDate").val();
+            var lm = $("#TimeSlotModel_lm option:selected").text();
+
+            $.ajax({
+                url: '/freetimeslots',
+                type: 'GET',
+                data: { Date: date, LM: lm },
+                dataType: 'json',
+                success: function (response) {
+
+                    var len = response.data.length;
+                    var res = response.data;
+                    $("#selectedTsVal").empty();
+                    for (var i = 0; i < len; i++) {
+                        var text = res[i]['text'];
+                        var value = res[i]['value'];
+
+                        $("#selectedTsVal").append("<option value='" + value + "'>" + text + "</option>");
+
+                    }
+                }
+            });
+        });
+
+    });    
+    
+</script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
