--- a/laundry/Pages/Delete.cshtml
+++ b/laundry/Pages/Delete.cshtml
@@ -19,7 +19,8 @@
             @Html.DisplayFor(model => model.TimeSlotModel.name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TimeSlotModel.lm)
+            @*@Html.DisplayNameFor(model => model.TimeSlotModel.lm)*@
+            <label>laundry machine</label>
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TimeSlotModel.lm)
