--- a/laundry/Pages/Details.cshtml
+++ b/laundry/Pages/Details.cshtml
@@ -38,6 +38,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.TimeSlotModel.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a class=" d-inline btn btn-tuwaiq-light text-light btn-sm" asp-page="./Edit" asp-route-id="@Model.TimeSlotModel.Id">Edit</a> |
+    <a class=" d-inline btn btn-tuwaiq-light text-light btn-sm" asp-page="./Index">Back to List</a>
 </div>
