--- a/laundry/Pages/Delete.cshtml
+++ b/laundry/Pages/Delete.cshtml
@@ -4,8 +4,12 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
-<h1>Delete</h1>
+<div class="row d-inline-flex justify-content-start">
+    <div>
+        <a asp-page="Index" class=" d-inline btn btn-tuwaiq-light text-light btn-sm">Back</a>
+        <h1 class="p-3 d-inline">Delete</h1>
+    </div>
+</div>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -42,6 +46,5 @@
     <form method="post">
         <input type="hidden" asp-for="TimeSlotModel.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
     </form>
 </div>
