--- a/laundry/Pages/Index.cshtml
+++ b/laundry/Pages/Index.cshtml
@@ -5,24 +5,23 @@
 
 @{ ViewData["Title"] = "Index"; }
 
-<p>
-</p>
-
 <div class="text-center">
     <h1 class="display-4">Laundry Schedule</h1>
 
 </div>
 
-<p>
-    <a class="btn btn-primary" asp-page="Create">Book new</a>
-</p>
+<div>
+    <a class="btn btn-tuwaiq-light text-light" asp-page="Create">Book new</a>
+</div>
 
-
-<form>
-    <p>
-        Select date: <input onchange="this.form.submit()" min="2021-04-01" type="date" asp-for="SelectedDate" />
-    </p>
-</form>
+<div class="mt-3 col-md-3">
+    <form>
+        <div class="form-group">
+            <label class="control-label">Schedule for </label>
+            <input class="form-control" onchange="this.form.submit()" min="2021-04-01" type="date" asp-for="SelectedDate" />
+        </div>
+    </form>
+</div>
 
 
 <div class="mt-4 container">
@@ -39,7 +38,10 @@
                     day = DateTime.Now.ToString("yyyy-MM-dd");
                 }
             }
-            <h2>Schedule: @day </h2>
+            <div class="col-md-6">
+
+                <h3>Schedule: @day </h3>
+            </div>
         </div>
     </div>
     <table id="myTable" class="table">
@@ -72,23 +74,14 @@
                 @Html.DisplayFor(modelItem => item.lm)
             </td>
             <td>
-                @*@Html.DisplayFor(modelItem => item.timeslot)*@
-                @*@{ string toHrs = item.timeslot.AddHours(1).AddMinutes(30).ToString("HH:mm");
-                                    if (item.regdate.Date < new DateTime(2021, 05, 09))
-                                    {
-                                        toHrs = item.timeslot.AddHours(1).ToString("HH:mm");
-                                    } }*@
-
                 @item.timeslot.ToString("HH:mm") to @item.timeslot.AddHours(1).AddMinutes(30).ToString("HH:mm")
-
-
 
             </td>
 
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                <a class="btn btn-sm btn-tuwaiq-light text-light" asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
                 @*<a asp-page="./Details" asp-route-id="@item.Id">Details</a> |*@
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                <a class="btn btn-sm btn-danger" asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>}
         </tbody>
