--- a/laundry/Pages/Shared/_Layout.cshtml
+++ b/laundry/Pages/Shared/_Layout.cshtml
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - .NET Laundry</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/tuwaiq-bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-
+    
     <!--datatables-->
     <link rel="stylesheet" type="text/css" href="DataTables/datatables.min.css" />
 
@@ -23,7 +23,10 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">.Net Bootcamp</a>
+
+                <a class="navbar-brand" asp-area="" asp-page="/Index">
+                    <img src="~/img/tuwaiq.jpeg" width="100" height="50" alt="">
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -31,11 +34,11 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         @*<li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>*@
+                    <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                </li>*@
                     </ul>
                 </div>
             </div>
@@ -47,9 +50,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top border-tuwaiq-dark footer text-muted bg-tuwaiq-light2">
         <div class="container">
-            @*&copy; 2021 - TM*@ 
+            2021
         </div>
     </footer>
 
