--- a/laundry/wwwroot/css/site.css
+++ b/laundry/wwwroot/css/site.css
@@ -6,18 +6,24 @@ a.navbar-brand {
   text-align: center;
   word-break: break-all;
 }
-
+.btn-tuwaiq-light {
+    color: #fff;
+    border-color: #3f0161;
+}
 /* Provide sufficient contrast against white background */
 a {
   color: #0366d6;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
-
+.btn-danger {
+    color: #fff;
+    border-color: #3f0161;
+}
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #1b6ec2;
@@ -63,9 +69,10 @@ body {
   margin-bottom: 60px;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    border-color: #3f0161;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px; /* Vertically center the text there */
 }
